//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  username String [pk]
  password String [not null]
  role Role [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Client {
  id Int [pk, increment]
  nom String [unique, not null]
  nomCommercial String
  email String
  adresse String
  nrc String
  nif String
  ai String
  nis String
  plaquePrix Float [not null]
  filmPrix Float [not null]
  telephone Phone [not null]
  employes Employe [not null]
  projects Project [not null]
}

Table Project {
  id Int [pk, increment]
  nom String [not null]
  note String
  status ProjectStatus [not null]
  type ProjectType [not null]
  nbPlaque_Film Int [not null]
  typePlaque PlaqueType
  dimension_x Float
  dimension_y Float
  unitPrice Float [not null]
  expectedPrice Float [not null]
  additionalFees Float [not null, default: 0]
  finalPrice Float [not null]
  nbTaches Int [not null]
  img String
  taches Tache [not null]
  client Client
  clientId Int
  createdAt DateTime [default: `now()`, not null]
}

Table TacheState {
  id Int [pk, increment]
  status TacheStatus [not null]
  createdAt DateTime [default: `now()`, not null]
  duration Int
  finishedAt DateTime
  tache Tache [not null]
  tacheId Int [not null]
}

Table Tache {
  id Int [pk, increment]
  nbPlaque_Film Int [not null]
  currentState TacheStatus [not null]
  statusList TacheState [not null]
  project Project
  projectId Int
}

Table Phone {
  id Int [pk, increment]
  number String [unique, not null]
  client Client
  clientId Int
  Employe Employe
  employeId Int
}

Table Employe {
  id Int [pk, increment]
  nom String [not null]
  telephone Phone [not null]
  client Client
  clientId Int
}

Enum Role {
  admin
  infographe
  employe
}

Enum ProjectStatus {
  EN_COURS
  TERMINE
  EN_ATTENTE
}

Enum ProjectType {
  CTP
  CTF
}

Enum PlaqueType {
  SM74
  SM72
  GTO
  MO
}

Enum TacheStatus {
  EN_ATTENTE
  EN_TRAITEMENT
  EN_GRAVURE
  EN_LIVRAISON
  TERMINE
}

Ref: Project.clientId > Client.id [delete: Cascade]

Ref: TacheState.tacheId > Tache.id [delete: Cascade]

Ref: Tache.projectId > Project.id [delete: Cascade]

Ref: Phone.clientId > Client.id [delete: Cascade]

Ref: Phone.employeId > Employe.id [delete: Cascade]

Ref: Employe.clientId > Client.id [delete: Cascade]